<resources>
    <string name="app_name">SmartButler</string>

    <string name="text_butler_service">服务管家</string>
    <string name="text_wechat">微信精选</string>
    <string name="text_girl">美女社区</string>
    <string name="text_user_info">个人中心</string>
    <string name="text_setting">设置</string>
    <string name="text_smart">智能管家</string>
    <string name="text_register">注 册</string>
    <string name="text_user">用户名</string>
    <string name="text_pwd">密码</string>
    <string name="text_login">登 录</string>
    <string name="text_remember">记住密码</string>
    <string name="text_forget_pwd">忘记密码？</string>
    <string name="text_age">年龄</string>
    <string name="text_intro">个人简介</string>
    <string name="text_boy">男</string>
    <string name="text_girl_f">女</string>
    <string name="text_pwd_again">再次输入密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_hint">注册成功需要到邮箱进行验证，否则无法登录！</string>
    <string name="text_desc">这个用户很懒，什么都没留下...</string>
    <string name="text_editor_password">修改密码</string>
    <string name="text_now_password">旧密码</string>
    <string name="text_new_password">新密码</string>
    <string name="text_password_again">再次输入密码</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_view_login">正在登录...</string>
    <string name="text_query">查询</string>
</resources>
